<resources>
    <string name="app_name">Практическая работа 10</string>
    <string name="my_smart_device">мое смарт-устройство</string>
    <string name="distance">1.3 km</string>
    <string name="energy">59 kcal</string>
    <string name="time">30 min</string>
    <string name="steps">1583 steps</string>
    <string name="heart_rate">82 bpm</string>
    <string name="weight">62 kg</string>
    <string name="reload">Перезагрузить</string>
    <string name="routes">маршруты</string>
    <string name="short_info">краткая информация</string>
    <string name="info">информация</string>
</resources>