<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/MainScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"

        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieButton">

        <ImageView
            android:id="@+id/timeIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:contentDescription="@string/time"
            android:scaleType="centerInside"
            android:src="@drawable/clock_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@+id/timeIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/timeIcon"
            app:layout_constraintTop_toTopOf="@+id/timeIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calorieButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"

        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distanceButton">

        <ImageView
            android:id="@+id/calorieIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:contentDescription="@string/energy"
            android:scaleType="centerInside"
            android:src="@drawable/fire_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calorieText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/energy"
            app:layout_constraintBottom_toBottomOf="@+id/calorieIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/calorieIcon"
            app:layout_constraintTop_toTopOf="@+id/calorieIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/distanceButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"

        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myDeviceButton">

        <ImageView
            android:id="@+id/distanceIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:contentDescription="@string/distance"
            android:scaleType="centerInside"
            android:src="@drawable/map_marker_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/distance"
            app:layout_constraintBottom_toBottomOf="@+id/distanceIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/distanceIcon"
            app:layout_constraintTop_toTopOf="@+id/distanceIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stepButton"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"

        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton">

        <ImageView
            android:id="@+id/stepIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:contentDescription="@string/steps"
            android:scaleType="centerInside"
            android:src="@drawable/reload_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stepText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="58dp"
            android:text="@string/steps"
            app:layout_constraintBottom_toBottomOf="@+id/stepIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/stepIcon"
            app:layout_constraintTop_toTopOf="@+id/stepIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/heartRateButton"
        android:layout_width="0dp"
        android:layout_height="157dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"
        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/weightButton"
        app:layout_constraintTop_toBottomOf="@+id/stepButton">

        <ImageView
            android:id="@+id/heartIcon"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/heart_rate"
            android:src="@drawable/heart_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heartRateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/heart_rate"
            app:layout_constraintBottom_toBottomOf="@+id/heartIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/heartIcon" />

        <ImageView
            android:id="@+id/heartRateGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/weight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heartIcon"
            app:srcCompat="@drawable/squiggly_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myDeviceButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"
        android:padding="23dp"
        android:paddingEnd="20dp"
        android:theme="@style/DevicesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/deviceIcon"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:contentDescription="@string/my_smart_device"
            android:src="@drawable/devices_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myDevicesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/my_smart_device"
            app:layout_constraintBottom_toBottomOf="@+id/deviceIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/deviceIcon"
            app:layout_constraintTop_toTopOf="@+id/deviceIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weightButton"
        android:layout_width="0dp"
        android:layout_height="157dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/main_page_button"
        android:clickable="true"
        android:theme="@style/MainScreenButton"
        app:layout_constraintEnd_toStartOf="@+id/heartRateButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepButton">

        <ImageView
            android:id="@+id/weightIcon"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/weight"
            android:src="@drawable/wifi_speed_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/weightNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/weight"
            app:layout_constraintBottom_toBottomOf="@+id/weightIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weightIcon" />

        <ImageView
            android:id="@+id/weightGraph"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/weight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightIcon"
            app:srcCompat="@drawable/sharp_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>